--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -9,5 +9,6 @@
 	"cancelButtonLabel": "Cancelar",
 	"playerNameHintText": "Nombre del jugador",
 	"greenTeamText": "Equipo verde",
-	"yellowTeamText": "Equipo amarillo"
+	"yellowTeamText": "Equipo amarillo",
+	"hideScreenText": "{playerName}\n({team, select, green{EQUIPO VERDE} yellow{EQUIPO AMARILLO} other{NULL}})\n\noculta la pantalla a otros jugadores"
 }
