--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -9,5 +9,6 @@
 	"cancelButtonLabel": "Annulla",
 	"playerNameHintText": "Nome del giocatore",
 	"greenTeamText": "Squadra verde",
-	"yellowTeamText": "Squadra gialla"
+	"yellowTeamText": "Squadra gialla",
+	"hideScreenText": "{playerName}\n({team, select, green{SQUADRA VERDE} yellow{SQUADRA GIALLA} other{NULL}})\n\nnasconde lo schermo agli altri giocatori"
 }
