--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -2,7 +2,7 @@
 	"gameRulesPart1": "El Juego de la Complicidad es un juego de grupo. Tienes que dividir a los participantes en dos equipos compuestos por personas con un gran sentido de la complicidad mutua.",
 	"gameRulesPart2": "En cada turno, el juego elige una palabra y un participante. Éste, mediante pistas, tendrá que conseguir que su equipo adivine la palabra y no el equipo contrario.",
 	"gameRulesPart3": "Gana el equipo que adivine más palabras.",
-	"enterParticipantsNamesText": "Introduzca los nombres de los participantes.",
+	"enterParticipantsNamesText": "Inscriba al menos a dos participantes por equipo",
 	"gameRulesButtonLabel": "Reglas del juego",
 	"startGameButtonLabel": "Iniciar una partida",
 	"deleteButtonLabel": "Eliminar",
