--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,16 +1,16 @@
 {
-  "gameRulesPart1": "Complicity Game is a group game. You need to divide the participants into two teams composed of people with a great sense of mutual complicity.",
-  "@gameRulesPart1": {
-    "description": "The first part of the game rules displayed to the user"
-  },
-  "gameRulesPart2": "At each turn the game chooses a word and a participant. The latter, through clues, will have to get their team to guess the word rather than the opposing team.",
-  "@gameRulesPart2": {
-    "description": "The second part of the game rules displayed to the user"
-  },
-  "gameRulesPart3": "The team that guesses the most words wins.",
-  "@gameRulesPart3": {
-    "description": "The third part of the game rules displayed to the user"
-  },
+	"gameRulesPart1": "Complicity Game is a group game. You need to divide the participants into two teams composed of people with a great sense of mutual complicity",
+	"@gameRulesPart1": {
+		"description": "The first part of the game rules displayed to the user"
+	},
+	"gameRulesPart2": "At each turn the game chooses a word and a participant. The latter, through clues, will have to get their team to guess the word rather than the opposing team",
+	"@gameRulesPart2": {
+		"description": "The second part of the game rules displayed to the user"
+	},
+	"gameRulesPart3": "The team that guesses five words first wins",
+	"@gameRulesPart3": {
+		"description": "The third part of the game rules displayed to the user"
+	},
 	"enterParticipantsNamesText": "Enter at least two participants per team",
 	"@enterParticipantsNamesText": {
     "description": "The text prompting the user to enter participants' names"
@@ -74,5 +74,9 @@
 				"type": "String"
 			}
 		}
+	},
+	"hiddenWordText": "Hidden word",
+	"@hiddenWordText": {
+    	"description": "Text indicating that the mysterious word was hidden"
 	}
 }
