--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -13,5 +13,7 @@
 	"hideScreenText": "{playerName}\n({team, select, green{EQUIPO VERDE} yellow{EQUIPO AMARILLO} other{NULL}})\n\noculta la pantalla a otros jugadores",
 	"mysteryWordText": "La palabra secreta es\n\n{word}",
 	"makeTeamWinButtonLabel": "Equipo {team, select, green{verde} yellow{amarillo} other{null}} gana",
-	"hiddenWordText": "Palabra oculta"
+	"hiddenWordText": "Palabra oculta",
+	"drawButtonLabel": "Empate",
+	"wordFoundButtonLabel": "¡Palabra encontrada!"
 }
