--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -13,5 +13,7 @@
 	"hideScreenText": "{playerName}\n({team, select, green{SQUADRA VERDE} yellow{SQUADRA GIALLA} other{NULL}})\n\nnasconde lo schermo agli altri giocatori",
 	"mysteryWordText": "La parola segreta è\n\n{word}",
 	"makeTeamWinButtonLabel": "Squadra {team, select, green{verde} yellow{gialla} other{null}} vince",
-	"hiddenWordText": "Parola nascosta"
+	"hiddenWordText": "Parola nascosta",
+	"drawButtonLabel": "Patta",
+	"wordFoundButtonLabel": "Parola trovata!"
 }
